updated latest changes

--- a/css/style-core.css
+++ b/css/style-core.css
@@ -5994,7 +5994,7 @@ html.mm-opening.inteco-mmenu-right .inteco-mobile-header {
 	padding: 15px; 
 	width: 100%;
 	display: block; -webkit-appearance: none; 
-	background-color:#af938f; 
+	background-color:#A0C6B7; 
 	border: 0;
 	color: #fff;
 	font-style: normal !important;
